[gd_scene load_steps=15 format=3 uid="uid://birnebio532xh"]

[ext_resource type="Script" uid="uid://b0qbx467rr8xn" path="res://scripts/main.gd" id="1_kn2el"]
[ext_resource type="Resource" uid="uid://bfvp0dbve6sew" path="res://data/themes/swamp_theme.tres" id="2_mwfav"]
[ext_resource type="PackedScene" uid="uid://c61j7c6vejtpg" path="res://scenes/Board.tscn" id="2_scd1o"]
[ext_resource type="PackedScene" uid="uid://ch4diixeakcwp" path="res://scenes/ui/HeroPanel.tscn" id="3_6i7k1"]
[ext_resource type="Script" uid="uid://stmfjg2ppeoq" path="res://scripts/board/board.gd" id="3_nkrwe"]
[ext_resource type="PackedScene" uid="uid://dl857a7s00ie8" path="res://scenes/ui/TrashZone.tscn" id="4_0ppij"]
[ext_resource type="Script" uid="uid://bleebcuop8ehy" path="res://scripts/ui/hero_panel.gd" id="5_qqghe"]
[ext_resource type="PackedScene" uid="uid://cwn8eaujvffyq" path="res://scenes/ui/BossPreview.tscn" id="5_r1xti"]
[ext_resource type="PackedScene" uid="uid://b4srhct1iruih" path="res://scenes/ui/ThemeChoice.tscn" id="6_46o2g"]
[ext_resource type="Script" uid="uid://cacutuvc847uk" path="res://scripts/ui/trash_zone.gd" id="7_n330b"]
[ext_resource type="Script" uid="uid://dal110wbtsem" path="res://scripts/ui/boss_preview.gd" id="9_urx7g"]
[ext_resource type="Script" uid="uid://bcwrlgffogacc" path="res://scripts/ui/theme_choice.gd" id="11_g72px"]
[ext_resource type="PackedScene" uid="uid://bd8xfrb88t0m0" path="res://scenes/cards/CardView.tscn" id="12_bjd11"]
[ext_resource type="Script" uid="uid://dofuuw7nss8qg" path="res://scripts/ui/card_layer.gd" id="12_qmy6f"]

[node name="Main" type="Node"]
script = ExtResource("1_kn2el")
theme = ExtResource("2_mwfav")

[node name="Board" parent="." instance=ExtResource("2_scd1o")]
z_index = -1
script = ExtResource("3_nkrwe")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HeroPanel" parent="UI" instance=ExtResource("3_6i7k1")]
z_index = 10
script = ExtResource("5_qqghe")

[node name="TrashZone" parent="UI" instance=ExtResource("4_0ppij")]
z_index = 10
script = ExtResource("7_n330b")

[node name="BossPreview" parent="UI" instance=ExtResource("5_r1xti")]
script = ExtResource("9_urx7g")

[node name="ThemeChoice" parent="UI" instance=ExtResource("6_46o2g")]
script = ExtResource("11_g72px")

[node name="CardLayer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("12_qmy6f")

[node name="CardView" parent="UI/CardLayer" instance=ExtResource("12_bjd11")]
layout_mode = 1

[node name="CardView2" parent="UI/CardLayer" instance=ExtResource("12_bjd11")]
layout_mode = 1

[node name="DebugHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="DebugBox" type="VBoxContainer" parent="UI/DebugHUD"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 308.0
offset_bottom = 68.0

[node name="SeedLabel" type="Label" parent="UI/DebugHUD/DebugBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="SpawnLabel" type="Label" parent="UI/DebugHUD/DebugBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="OverflowArea" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 160.0
grow_vertical = 0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="UI/OverflowArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.14117648, 0.14117648, 0.14117648, 0.5882353)
